TEST_PROGRAMS/INVALID/anderson_santossilva/semicolonAfterReservedWords.min
# These reserved words don't have semicolon after.
if x then;
else;
endif;
while x do;
done;

